# pi-watcher

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml
assets/: index.html
deploy/: pi-watcher.service
src/: config.rs  engine.rs  main.rs  monitor.rs  notify.rs  probes.rs  store.rs  web.rs
