[package]
name = "pi-watcher"
version = "0.1.0"
edition = "2021"
description = "Home internet watcher for a Raspberry Pi: layered probes with failure attribution, SQLite history, ntfy alerts, and a built-in dashboard"
license = "MIT"
repository = "https://github.com/ShaneMarusczak/pi-watcher"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
surge-ping = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
