[package]
name = "pi-watcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Home internet watcher for a Raspberry Pi: layered probes with failure attribution, SQLite history, ntfy alerts, and a built-in dashboard"
license = "MIT"
repository = "https://github.com/ShaneMarusczak/pi-watcher"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
socket2 = "0.6"
surge-ping = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release]
# A panic in a monitoring daemon should die loudly and let systemd restart it
# (startup resume rehydrates state) rather than limp on with a dead task.
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
debug = false
incremental = false
